# withparen

./: .env.example  .env.ocean  .gitignore  OCEAN_PLUGIN_FIXES.md  OCEAN_SETUP.md  README.md  package.json
anchor-programs/: .env.example  .gitignore  Anchor.toml  DEPLOYMENT_GUIDE.md  README.md
anchor-programs/human-connection/: Anchor.toml
anchor-programs/human-connection/programs/human-connection/: Cargo.toml
anchor-programs/human-connection/programs/human-connection/src/: lib.rs
anchor-programs/me-token/: .gitignore  Anchor.toml  setup-wallet.ts
anchor-programs/me-token/programs/me-token/: Cargo.toml
anchor-programs/me-token/programs/me-token/src/: lib.rs
anchor-programs/unified-token-program/: Anchor.toml  README.md  package-lock.json  unified_token_program.json
anchor-programs/unified-token-program/programs/unified-token-program/: Cargo.toml
anchor-programs/unified-token-program/programs/unified-token-program/src/: lib.rs
anchor-programs/unified-token-program/scripts/: initialize-global.ts
anchor-programs/unified-token-program/tests/: unified-token-program.ts
anchor-programs/user-pda/: .env.example  Anchor.toml  README.md  setup-wallet.ts
anchor-programs/user-pda/programs/user-pda/: Cargo.toml
junkyard/: graphSchema.ts
scripts/: README-memgraph.md  debug-advertiseDid-detailed.js  debug-ocean-format.js  fix-ocean-node-config.sh  restart-ocean-node.sh  test-ocean-advertise.js  test-ocean-direct.js  test-ocean-js-direct.js  test-ocean-minimal.js  test-ocean-publish.js  updateMemgraph.ts
scripts/places/: build-station.json  cic.json
