[package]
name = "human-connection"
version = "0.1.0"
description = "HumanConnection - Lock ME tokens, exchange PINs, unlock MEMO rewards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "human_connection"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
sha2 = "0.10"

[dev-dependencies]
