[package]
name = "me-token"
version = "0.1.0"
description = "Personal ME token system with daily minting limits"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "me_token"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"

[dev-dependencies]
